--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-06 22:40:45
+lastsearch = 2024-08-06 23:34:47
 
 [shopee.vn]
 match = -214.3%%
@@ -12,9 +12,9 @@ title = mùng chụp tự bung cao cấp 18 x 18 m giá tốt Tháng 7, 2024
 url = https://shopee.vn/search?keyword=mùng chụp tự bung cao cấp 18 x 18 m
 
 [mungthienmetta.com]
-match = -185.7%%
-title = {NEW2021} Mùng Ngủ METTA Tự Bung Thông Minh - 2 ...
-url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2021-mung-ngu-metta-tu-bung-thong-minh-2-met-vuong-mngu2m-vuong-xam-bh-18-thang.html
+match = -171.4%%
+title = {NEW2022} 2M Vuông | Mùng Ngủ METTA Tự Bung - ...
+url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2022-2m-vuong-mung-ngu-metta-tu-bung-mngu2m-vuong-vang-bh-18-thang.html
 
 [tiki.vn]
 match = -221.4%%
@@ -27,9 +27,9 @@ title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
 url = https://manthutrang.com/
 
 [www.mantubung.com]
-match = -150.0%%
-title = Mùng Chụp Tự Bung Người Lớn chống muỗi BẢO BẢO
-url = https://www.mantubung.com/mung-chup-tu-bung.html
+match = -228.6%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [www.lazada.vn]
 match = -242.9%%
@@ -43,8 +43,8 @@ url = https://www.mungbaobao.com/
 
 [www.bible.com]
 match = -142.9%%
-title = THUPUAN 18 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/REV.18.MIZOVBSI
+title = MATHAIA 18 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MAT.18.MIZCLBSI
 
 [mungchup.com]
 match = -164.3%%
