--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-06 16:57:20
+lastsearch = 2024-08-06 23:49:48
 
 [hoa18.com]
 match = -87.5%%
@@ -12,9 +12,9 @@ title = Sản phẩm
 url = https://hoa18.com/shop/page/8
 
 [www.youtube.com]
-match = -147.4%%
-title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
-url = https://www.youtube.com/watch?v=NPdIFgtFTso
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
@@ -102,9 +102,9 @@ title = Giá vàng mất mốc 67 triệu đồng/lượng
 url = https://www.baodienbienphu.com.vn/tin-tuc/kinh-te/204300/gia-vang-mat-moc-67-trieu-dongluong?page=73
 
 [nongnghiep.vn]
-match = 21.1%%
-title = Cây hoa mộc đời người
-url = https://nongnghiep.vn/cay-hoa-moc-doi-nguoi-d312963.html
+match = -26.3%%
+title = Nhóm giống hoa lily trồng phổ biến
+url = https://nongnghiep.vn/nhom-giong-hoa-lily-trong-pho-bien-d205138.html
 
 [vietjack.com]
 match = -131.6%%
