--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-06 20:49:14
+lastsearch = 2024-08-07 00:00:00
 
 [shopee.vn]
 match = -28.0%%
@@ -47,9 +47,9 @@ title = Các đối sách lớn của Đài Loan trong những năm tiếp theo
 url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-nam-tiep-theo/
 
 [books.google.com]
-match = -96.0%%
-title = Địa chí Tiền Giang - Volume 2 - Page 958 - Google Books Result
-url = https://books.google.com/books?id=eacMAQAAMAAJ&pg=PA958&lpg=PA958&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=jtZMIwtxHk&sig=ACfU3U1KnRtW5zuUm_AiyXlmqnBTV0D1cg&hl=en&sa=X&ved=2ahUKEwjMhoLhreCHAxXlHEQIHYBSGBEQ6AF6BAg7EAM
+match = 12.0%%
+title = Ngự-ché̂ Việt-sử tó̂ng-vịnh
+url = https://books.google.com/books?id=tVIsxUmMpVMC&pg=PA219&lpg=PA219&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=wCCbVR2WIg&sig=ACfU3U1HEgEn5WFxW893oACosg9SJAQx1Q&hl=en&sa=X&ved=2ahUKEwjShZXL6-CHAxVTHkQIHSyPJZIQ6AF6BAgYEAM
 
 [cellphones.com.vn]
 match = -52.0%%
@@ -59,7 +59,7 @@ url = https://cellphones.com.vn/sforum/phim-dai-loan
 [www.luavietours.com]
 match = -36.0%%
 title = ĐÀI LOAN 5N4Đ | ĐÀI BẮC – ĐÀI TRUNG – CAO HÙNG
-url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/?date=20-07
+url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/?date=31-08
 
 [www.traveloka.com]
 match = -76.0%%
