--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-06 20:53:28
+lastsearch = 2024-08-06 23:47:40
 
 [www.tiktok.com]
 match = -152.9%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilnXyw2-M&sig=ACfU3U1qrKz-nKubLGmF0_TnQvaUvAbMfA&hl=en&sa=X&ved=2ahUKEwizu-ajpeCHAxXOEUQIHbdULHwQ6AF6BAgbEAM
+match = -205.9%%
+title = Labour and Life of the People - Volume 1 - Google Books Result
+url = https://books.google.com/books?id=u-QrGtuleCsC&pg=RA1-PT4&lpg=RA1-PT4&dq=man+in+hoa+dep+16&source=bl&ots=WFetfmGpCc&sig=ACfU3U0gDf6shtjVpZDV4j6dkpY4TIHHug&hl=en&sa=X&ved=2ahUKEwiu9_zp6OCHAxUkI0QIHcJ8JoEQ6AF6BAgZEAM
 
 [tax.vermont.gov]
 match = -29.4%%
