--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-06 16:30:02
+lastsearch = 2024-08-06 23:45:53
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Thảm giường Bode 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [shopee.vn]
-match = -95.0%%
-title = Bộ Drap 4 món Ga giường thun lạnh HQ [ NỆM CAO 15- ...
-url = https://shopee.vn/Bộ-Drap-4-món-Ga-giường-thun-lạnh-HQ-NỆM-CAO-15-25CM-gồm-1-ga-2-vỏ-nằm-1-vỏ-ôm-i.177151023.20208763729
+match = -105.0%%
+title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường xếp
 
 [sofatoanquoc.com]
 match = 30.0%%
@@ -82,9 +82,9 @@ title = Giường - Sản phẩm mùa hè
 url = https://www.quiphuc.com/collections/giuong-san-pham-mua-he
 
 [sumika.vn]
-match = -65.0%%
-title = Giường xếp gọn - Thiết bị gia dụng SUMIKA
-url = https://sumika.vn/giuong-xep-gon-846
+match = -140.0%%
+title = Giường xếp gọn, ghế xếp là hai sản phẩm tiện ích của ...
+url = https://sumika.vn/ghe-xep-giuong-xep-839
 
 [noithatanhuy.com.vn]
 match = -5.0%%
