--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-08-06 20:28:53
+lastsearch = 2024-08-06 23:59:39
 
 [www.everonqb.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối Everon ES1804
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-es1804
 
 [www.diepxuan.com]
-match = 43.5%%
-title = Điệp Xuân Vỏ gối ôm ES1715 80x100
-url = https://www.diepxuan.com/vo-goi-om-es1715-80x100.html
+match = 30.4%%
+title = Vỏ gối ôm EP1735 80x100 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-om-ep1735-80x100.html
 
 [forum.cartridgecollectors.org]
 match = -21.7%%
