--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-08-06 22:31:31
+lastsearch = 2024-08-07 01:00:41
 
 [demxanh.com]
 match = 11.8%%
@@ -135,4 +135,9 @@ url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
 match = -5.9%%
 title = Review chiếu điều hòa cao su non và vài món mua trên Sốp ...
 url = https://www.youtube.com/watch?v=1UjrRLNjJ7o
+
+[www.tiktok.com]
+match = -20.6%%
+title = Từ giờ mình chính thức sợ chiếu điều hoà cao su non nha ...
+url = https://www.tiktok.com/@luongchiuu/video/7360658604606622983
 
