--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-07 01:46:34
+lastsearch = 2024-08-07 02:44:04
 
 [demxanh.com]
-match = -7.1%%
-title = Bộ ga chun Cotton chống thấm màu xanh ngọc
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
+match = -42.9%%
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 21
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-21.html
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
+match = 10.7%%
+title = Chiếu nhựa Hà Nội 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
