--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-07 03:44:50
+lastsearch = 2024-08-07 05:15:53
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = -18.5%%
-title = Chăn Băng Lông Tuyết Nhung, Chăn Thái Sịn Cho Mùa ...
-url = https://shopee.vn/Chăn-Băng-Lông-Tuyết-Nhung-Chăn-Thái-Sịn-Cho-Mùa-Đông-Ấm-Áp-Loại-5kg-2x2-2m-i.529742790.25408766175
+match = -55.6%%
+title = Mền nhung tuyết Thái Lan / nhắn tin chọn màu / nếu ko , ...
+url = https://shopee.vn/Mền-nhung-tuyết-Thái-Lan-nhắn-tin-chọn-màu-nếu-ko-shop-sẽ-giao-màu-ngẫu-nhiên.-i.78219540.1375930243
 
 [www.lazada.vn]
 match = 3.7%%
@@ -122,9 +122,9 @@ title = Lần đầu đến Trường Sa
 url = https://bacgiang.gov.vn/chi-tiet-tin-tuc/-/asset_publisher/St1DaeZNsp94/content/lan-au-en-truong--1
 
 [tuoitre.vn]
-match = -51.9%%
-title = Cựu thủ tướng Thaksin quyết tâm trở về Thái Lan: 'Tôi đã già'
-url = https://tuoitre.vn/cuu-thu-tuong-thaksin-quyet-tam-tro-ve-thai-lan-toi-da-gia-20230509134322744.htm
+match = -66.7%%
+title = Thái Lan và Philippines giành thêm huy chương ở Olympic ...
+url = https://tuoitre.vn/thai-lan-va-philippines-gianh-them-huy-chuong-o-olympic-2024-20240807042636.htm
 
 [vnvc.vn]
 match = -70.4%%
@@ -295,4 +295,9 @@ url = https://vntravel.org.vn/thai-lan-tap-trung-thu-hut-nhom-khach-o-dai-ngay-c
 match = 36.4%%
 title = Chăn lông tuyết cho bé
 url = https://www.bebong.vn/products/chan-long-tuyet-cho-be
+
+[baobinhthuan.com.vn]
+match = -37.0%%
+title = Bát nháo ở Trạm dừng chân tạm trên cao tốc Vĩnh Hảo
+url = https://baobinhthuan.com.vn/bat-nhao-o-tram-dung-chan-tam-tren-cao-toc-vinh-hao-phan-thiet-bai-1-122927.html
 
