--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-07 01:21:38
+lastsearch = 2024-08-07 05:24:23
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -14,12 +14,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 [www.lazada.vn]
 match = -53.6%%
 title = Khay đá 18 viên nhựa Việt Nhật / Khay Đá Kim Cương 18 ...
-url = https://www.lazada.vn/products/khay-da-18-vien-nhua-viet-nhat-khay-da-kim-cuong-18-vien-khuon-lam-da-i1397366047.html
+url = https://www.lazada.vn/products/khay-da-18-vien-nhua-viet-nhat-khay-da-kim-cuong-18-vien-khuon-lam-da-i1397366047.html?srsltid=AfmBOoqZWPNw6nAzTIhu56iZkblPQFfjsXf_M0yFtUhYgmIBf3gDwJE5
 
 [www.instagram.com]
-match = -10.7%%
-title = Minh Beta (@minhbeta) • Фото и видео в ...
-url = https://www.instagram.com/minhbeta/?locale=ru&hl=am-et
+match = 11.5%%
+title = Khánh Linh (@t_khanh_linh)
+url = https://www.instagram.com/t_khanh_linh/?hl=en
 
 [ninhbinhstone.com]
 match = -25.0%%
@@ -109,7 +109,7 @@ url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual 
 [drhc-cosmetics.com]
 match = -71.4%%
 title = Goat Milk Orange (110g, 3.8oz.) (Skin brightening, Anti- ...
-url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
+url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18?srsltid=AfmBOopFuubmgH1snu98vfqTULNvGtrkmRs8R4TTnFuAll3ZmkAoL5Z8
 
 [quangduc.com]
 match = -42.9%%
