--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-07 04:31:28
+lastsearch = 2024-08-07 05:21:26
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -232,9 +232,9 @@ title = DANH SÁCH CÁC TỈNH THÀNH CÓ CƠ SỞ Y TẾ ĐƯỢC ...
 url = https://www.manulife.com.vn/content/dam/insurance/vn/documents/service-docs/quyen-loi-hop-dong-bao-hiem/danh-sach-bao-lanh-vien-phi-tai-viet-nam.pdf
 
 [www.instagram.com]
-match = -206.7%%
-title = Vesta Lifestyle & Gifts | 🌈 HAPPY PRIDE MONTH 🌈 Top ...
-url = https://www.instagram.com/vesta.lifestyle/p/C7wT8s0vvbM/
+match = -106.7%%
+title = The B6 Hà Nội - Đồ Hàn (@theb6.hanoi)
+url = https://www.instagram.com/theb6.hanoi/?hl=en
 
 [luatvietnam.vn]
 match = -240.0%%
