--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-08-07 04:15:35
+lastsearch = 2024-08-07 05:14:31
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -32,9 +32,9 @@ title = 5 loại chiếu cực mát lưng cho mùa hè, được ưa chuộng ..
 url = https://www.dienmayxanh.com/kinh-nghiem-hay/5-loai-chieu-nam-mat-lim-lung-cho-mua-he-duoc-ua-1267470
 
 [chieutrucsaigon.com]
-match = -30.4%%
-title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
+match = -21.4%%
+title = TIN TRONG NƯỚC
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/
 
 [shopee.vn]
 match = -43.5%%
@@ -42,9 +42,9 @@ title = Chiếu tre - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu tre
 
 [www.youtube.com]
-match = -113.0%%
-title = Sạt lở đất gây sập nhà, hai vợ chồng ở Lạng Sơn tử vong ...
-url = https://www.youtube.com/watch?v=knyNrvqVtGo
+match = -117.4%%
+title = [Trực tiếp] Tổng đài nông nghiệp, ngày 05/08/2024 (từ 10h25 ...
+url = https://www.youtube.com/watch?v=gW-6EWkFlqs
 
 [hcmcpv.org.vn]
 match = -91.3%%
