--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-07 02:27:02
+lastsearch = 2024-08-07 05:25:27
 
 [thegioidemviet.vn]
-match = 35.7%%
-title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
-url = https://thegioidemviet.vn/chieu-truc-que-lam/
+match = 21.4%%
+title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
+url = https://thegioidemviet.vn/chieu-truc/
 
 [chieutrelanlan.com]
 match = 25.0%%
@@ -22,14 +22,14 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [shopee.vn]
-match = 17.9%%
-title = CHIẾU TRÚC QUẾ LÂM MẮT NGỌC KHÔNG HOA VĂN ...
-url = https://shopee.vn/CHIẾU-TRÚC-QUẾ-LÂM-MẮT-NGỌC-KHÔNG-HOA-VĂN-HÀNG-LOẠI-1-BÓNG-ĐẸP-i.444652147.14296554126
+match = -3.6%%
+title = Chiếu Trúc QUẾ LÂM Hạt Vàng Cao cấp đủ kích thước ...
+url = https://shopee.vn/Chiếu-Trúc-QUẾ-LÂM-Hạt-Vàng-Cao-cấp-đủ-kích-thước-Chiếu-Trúc-Miếng-Siêu-Bền-i.264312794.4455092764
 
 [demxanh.com]
 match = -7.1%%
 title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
-url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html?srsltid=AfmBOop_mvXuJsSsGZoIpzge2eLL6fyuXCbsSRpKSlH4zS9H_yTPu7vH
+url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [tiki.vn]
 match = -39.3%%
@@ -39,7 +39,7 @@ url = https://tiki.vn/search?q=chiếu trúc hạt
 [www.lazada.vn]
 match = -42.9%%
 title = Chiếu trúc hạt quế lâm và chiếu trúc hạt Việt Nam ( đủ kích ...
-url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-va-chieu-truc-hat-viet-nam-du-kich-thuoc-i1321767504.html?srsltid=AfmBOor-zuASU-srxAMdDfqcGklq38UMxaJioK6DpgqJqdl_kqglzonD
+url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-va-chieu-truc-hat-viet-nam-du-kich-thuoc-i1321767504.html
 
 [www.youtube.com]
 match = -3.6%%
