--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-07 03:41:07
+lastsearch = 2024-08-07 05:29:15
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -290.9%%
-title = Khung giường bằng kim loại gần Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
+match = -281.8%%
+title = Có bán Đệm giường đôi lớn tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/queen-mattresses/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -107,14 +107,14 @@ title = Giường MN 5
 url = http://thietbimamnontienloc.com/san-pham/giuong-mn-5-253.html
 
 [www.airbnb.com.vn]
-match = -309.1%%
-title = Phòng 1 Giường cỡ King 2 Phòng tại Bloomington - Airbnb
-url = https://www.airbnb.com.vn/rooms/929459059736966278
+match = -400.0%%
+title = Phòng tiêu chuẩn 1 giường đôi tại Millennium Minneapolis - Airbnb
+url = https://www.airbnb.com.vn/hotels/1059440610457947224
 
 [freemeteo.cl]
 match = -281.8%%
 title = Weather Xom Giuong (1) - Long term weather forecast
-url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/monthly/?gid=1561485&mn=7&language=english&country=vietnam
+url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/weekly/?gid=1561485&mn=2&wk=1&language=english&country=vietnam
 
 [www.booking.com]
 match = -290.9%%
