--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-07 04:35:31
+lastsearch = 2024-08-07 05:28:14
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -117,9 +117,9 @@ title = NEM jumps to a 42 week high – reasons unknown
 url = https://cryptoslate.com/nem-jumps-to-a-42-week-high-reasons-unknown/
 
 [apps.dtic.mil]
-match = -69.6%%
-title = Task Force Smith--A Leadership Failure? - DTIC
-url = https://apps.dtic.mil/sti/tr/pdf/ADA251335.pdf
+match = -47.8%%
+title = EBB and Flow, November 1950-July 1951 - DTIC
+url = https://apps.dtic.mil/sti/tr/pdf/ADA232745.pdf
 
 [www.tiktok.com]
 match = 4.3%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -73.9%%
-title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
-url = https://en.yna.co.kr/view/AEN20180406000600320
+match = -113.0%%
+title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
+url = https://en.yna.co.kr/view/AEN20180218002800320
 
 [www.usmcu.edu]
 match = -104.3%%
