--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-08-07 04:14:09
+lastsearch = 2024-08-07 05:14:10
 
 [everonvn.com.vn]
 match = -12.5%%
 title = Tấm trải chần Everon chất liệu 100%% cotton
-url = https://everonvn.com.vn/everon/2166/tam-trai-everon
+url = https://everonvn.com.vn/everon/2166/tam-trai-everon?srsltid=AfmBOooJzF1TzxBZky3eZQuqn_Zn2anOGn190yR0PPW0n8rvmHzJc8BL
 
 [everonthaiha.com]
 match = 35.3%%
@@ -27,9 +27,9 @@ title = Topper Everon - Tấm Tăng Tiện Nghi
 url = https://everon.online/collections/topper-tam-tang-tien-nghi
 
 [www.lazada.vn]
-match = -37.5%%
-title = Tấm Trải đa Năng Everon Giá Tốt T06/2024 - Lazada
-url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/
+match = -66.7%%
+title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/tam-trai-everon/?srsltid=AfmBOorEID8Ln8tm2JXIwd_E-8WQ3n8LxYee7mIVeiXcz_y8wUXmmcRg
 
 [www.everonvn.vn]
 match = -20.8%%
