--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-08-07 03:43:47
+lastsearch = 2024-08-07 05:15:11
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 0.0%%
-title = Jeffrey Bluestone, PhD
-url = https://profiles.ucsf.edu/jeffrey.bluestone
+match = 10.0%%
+title = Joan Hilton, DSc, MPH
+url = https://profiles.ucsf.edu/joan.hilton
 
 [cityofclovis.com]
 match = -65.0%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q2.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -130.0%%
-title = Uncoupling Proteins: Role in Insulin Resistance and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
+match = -150.0%%
+title = Consensus Guidelines on the Use of Intravenous Ketamine ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6023575/
 
 [www.energy.gov]
 match = -95.0%%
@@ -172,9 +172,9 @@ title = EPA's Reanalysis of Key Issues Related to Dioxin Toxicity and ...
 url = https://cfpub.epa.gov/ncea/iris/iris_documents/documents/supdocs/dioxinv1sup.pdf
 
 [cps-vo.org]
-match = -150.0%%
-title = *** 276 Total Attendees (listed in green) *** | Cyber- ...
-url = https://cps-vo.org/group/cpspimtg24/registrants-attendees
+match = -140.0%%
+title = Registrants | Cyber-Physical Systems Virtual Organization
+url = https://cps-vo.org/group/satc-pimtg22/registrants
 
 [backend.daikincomfort.com]
 match = -28.6%%
@@ -214,7 +214,7 @@ url = https://tomorrow.norwalkct.org/wp-content/uploads/2019/02/Complete-POCD-Dr
 [profiles.stanford.edu]
 match = -35.0%%
 title = Fei-Fei Li - Stanford Profiles
-url = https://profiles.stanford.edu/fei-fei-li/
+url = https://profiles.stanford.edu/fei-fei-li
 
 [profiles.sc-ctsi.org]
 match = -80.0%%
